# trading-oracle

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  config.yaml  main.py  pyproject.toml
.sisyphus/plans/: nasdaq-support-spec.md  partial-trade-spec.md
data/: causal_graph.json  portfolio.json
docs/: 2026-03-28-22-00-Phase5-적응형-가중치.md  2026-03-28-22-30-Phase6-시장레짐감지.md  2026-03-28-22-30-수량기반-매매추천.md  2026-03-28-23-00-Phase7-일간변동리포트.md  2026-03-28-23-15-나스닥-미국시장-지원.md  2026-03-29-14-00-시그널-백테스트-구현.md  2026-03-29-15-30-시그널엔진-v2.md  2026-03-29-21-00-포지션사이징-구현.md  2026-03-29-21-30-v2-spec-작성.md  2026-03-29-22-00-인과그래프-글로벌확장.md  2026-03-29-22-30-나스닥SP500-전달누락-수정.md  2026-03-30-22-00-Phase17-환율팩터-구현.md  2026-03-30-23-00-Phase18-백테스트-구현.md  2026-03-30-23-30-백테스트-파라미터최적화.md  2026-03-30-23-45-Phase19-상관리스크-구현.md  2026-03-31-00-00-일일분석-Phase17-19통합.md  2026-04-06-09-37-시총-NaN-변환오류-수정.md  2026-04-06-20-11-의견출력-잘림-제거.md  2026-04-06-20-30-추천-현금부족-매수차단-표시.md  2026-04-06-20-34-추천리스트-매수가능-배지표시.md  2026-04-07-16-07-Phase20-추천후보군-확장-다양성선택-스펙작성.md  2026-04-07-16-57-추천파이프라인-구현.md  2026-04-07-17-17-README-SKILL-추천문서-갱신.md  2026-04-07-17-38-스킬-호출자-llm-응답구조-스펙작성.md  2026-04-07-17-46-v4-phase21-prd-생성.md  2026-04-07-17-59-v4-skill-path-only-수정.md  2026-04-07-18-30-스킬경로-llm-위임-구현.md
scripts/: backtest.py  build_causal.py  daily.py  performance.py  perspective.py  portfolio.py  recommend.py  screen.py  verify_causal.py
src/: common.py
src/agent/: codex.py  oracle.py  prompts.py
src/backtest/: engine.py  metrics.py
src/causal/: builder.py  graph.py  verifier.py
(+53 files in other folders)
