[project]
name = "trading-oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "anthropic>=0.86.0",
    "beautifulsoup4>=4.14.3",
    "finance-datareader>=0.9.110",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pykrx>=1.0.51",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "setuptools<81",
]
