[project]
name = "trading-oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "anthropic>=0.86.0",
    "beautifulsoup4>=4.14.3",
    "finance-datareader>=0.9.110",
    "httpx>=0.28.0",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "pandas>=3.0.1",
    "pykrx>=1.0.51",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "setuptools<81",
]
